--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,20 @@
 .femaleb {
   background-color: red;
+  font-size: 24px;
+  border-radius: 50%;
 }
 .maleb {
   background-color: green;
+  font-size: 24px;
+  border-radius: 50%;
+}
+
+
+.searchbar{
+    margin: auto;
+    display: block;
+}
+
+.margin-top{
+    margin-top: 20px;
 }
