--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,13 @@
 .femaleb {
-  background-color: red;
+  background-color: #E0BBE4;
   font-size: 24px;
-  border-radius: 50%;
+  border-radius: 20%;
 }
 .maleb {
-  background-color: green;
+  background-color: #FFDFD3;
   font-size: 24px;
-  border-radius: 50%;
+  border-radius: 20%;
 }
-
 
 .searchbar{
     margin: auto;
@@ -17,4 +16,8 @@
 
 .margin-top{
     margin-top: 20px;
+}
+
+.isactive{
+  border-color: black;
 }
